All_Component_DX/force-app/main/default/objects/Expense_Pricing__c/Expense_Pricing__c.object-meta.xml
<CustomObject>
    <description>Expense pricing for covered expenses</description>
    <label>Expense Pricing</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>