All_Component_DX/force-app/main/default/objects/Expense_Pricing__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>