All_Component_DX/force-app/main/default/objects/Expense_Pricing__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
            <value>
                <fullName>Markup %</fullName>
            </value>
            <value>
                <fullName>Per Unit</fullName>
            </value>
            <value>
                <fullName>Actuals</fullName>
            </value>
            <value>
                <fullName>Discount %</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>