All_Component_DX/force-app/main/default/objects/Expense_Pricing__c/fields/Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Plan</label>
    <referenceTo>Service_Plan__c</referenceTo>
    <relationshipLabel>Expense Pricing</relationshipLabel>
    <relationshipName>Expense_Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>